manifests/service-prod.yml
apiVersion: v1
kind: Service
metadata:
    name: pdfstamping
spec:
    type: LoadBalancer
    ports:
    - port: 80 
    selector:
        app: pdfstamping
