manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stamping-ingress
  labels:
    app: stamping
    release: stamping
  annotations:
    nginx.ingress.kubernetes.io/http2-push-preload: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  tls:
    - hosts:
        - "stamping.doclogix.lt"
      secretName: tls-stamping.doclogix.lt
  rules:
    - host: stamping.doclogix.lt
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: stamping
                port:
                  number: 80
